--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -68,8 +68,8 @@
         android:allowBackup="false"
         android:backupAgent="com.android.launcher3.LauncherBackupAgentHelper"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher_home"
-        android:label="@string/application_name"
+        android:icon="@mipmap/ic_launcher_cyra"
+        android:label="@string/cyra_application_name"
         android:largeHeap="@bool/config_largeHeap"
         android:restoreAnyVersion="true"
         android:supportsRtl="true" >
